--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,7 +14,10 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.24",
     "@clerk/backend": "^2.7.0",
+    "@convex-dev/agent": "^0.1.17",
+    "ai": "^4.3.19",
     "convex": "^1.25.4"
   }
 }
